# 2024-arm-ik

./: README.md
arm_ik/: README.md  package.xml  setup.cfg  setup.py
arm_ik/arm_ik/: angles_utility.py  local_ik_node.py  solvers.py
arm_ik/launch/: display.launch.py
arm_ik/meshes/: elbow.STL  forearm.STL  upper_arm.STL  wrist_bend.STL  wrist_roll.STL
arm_ik/rviz/: urdf.rviz
arm_ik/test/: arm_status_rviz.py  fk_solve_test.py  ik_command_rviz.py  ik_solve_test.py  local_ik_test.py  test_flake8.py  test_mypy.py
arm_ik/urdf/: Articulated_Arm_Rev2.csv  Articulated_Arm_Rev2.urdf
arm_msgs/: CMakeLists.txt  package.xml
arm_msgs/msg/: ArmCommand.msg  ArmStatus.msg  ControlMode.msg  JointCommand.msg  JointStatus.msg  MouseState.msg
arm_msgs/srv/: LocalIKFrameRequest.srv
